<resources>
    <string name="app_name">Event Registration</string>
    <string name="action_settings">Settings</string>
    <string name="newparticipant_hint">Who?</string>
    <string name="newparticipant_button">Add Participant</string>
    <string name="newevent_date_label">Date?</string>
    <string name="newevent_date_first">2016-09-28</string>
    <string name="newparticipant_label">Participant?</string>
    <string name="newparticipant_first">01-01-2016</string>
    <string name="newevent_hint">Event name?</string>
    <string name="newevent_button">Add Event</string>
    <string name="participantspinner_label">Participant?</string>
    <string name="eventspinner_label">Event?</string>
    <string name="blank_label" />
    <string name="newregister_button">Register</string>
    <string name="newstart_time_label">Start time?</string>
    <string name="newend_time_label">End time?</string>
    <string name="newestart_time">10:00</string>
    <string name="newend_time">11:00</string>

</resources>
